git init . git add index.css git commit -m "fix: update index.css to fix layout issue"

--- a/index.css
+++ b/index.css
@@ -77,16 +77,6 @@ nav:hover {
 .video-details h2, p{
     margin: 0;
 }
-.video-card {
-    width: 300px;
-    height: 180px;
-    border-radius: 10px;
-    box-shadow: 0px 2px 15px rgb(0 0 0 / 10%);
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-}
 .title {
     font-size: 16px;
     font-weight: 500;
@@ -157,8 +147,8 @@ nav:hover {
     white-space: normal;
 }
 .short-container {
-    width: 250px;
-    height: 420px;
+    width: 240px;
+    height: 426px;
 }
 .short-image {
     border-radius: 10px;
@@ -167,11 +157,14 @@ nav:hover {
 }
 .sub-section {
     display: flex;
+    grid-template-columns: auto 1fr;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 10px;
     margin-top: 20px;
+    margin-bottom: auto;
     padding: 0px 20px;
+
 }
 .text {
     display: flex;
